--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8082
+logging.path=/var/logs/
+logging.file=BookWorm.log
+logging.level.root=WARN
+logging.level.root.org.springframework.security=DEBUG
+
+spring.datasource.url=jdbc:mysql://localhost/readinglist
+spring.datasource.username=root
+spring.datasource.password=1q2w3e4r5t
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
